<resources>+
    <string name="app_name">Zazi</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? SIGN UP</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email address</string>
    <string name="signup">SIGNUP</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="disp_name">Display name</string>
    <string name="user_profile">User Profile</string>
    <string name="create_post">Create Post</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="my_username">[My_Username]</string>
    <string name="Greeting">Hi, </string>
    <string name="logout_button">Logout Button</string>
    <string name="community_name">Community Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="role">Role</string>
    <string name="hi">Hi!</string>
    <string name="username">Username</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="post_content">Post Content</string>
    <string name="action_1">Respond</string>
    <string name="action_2">Respond</string>
    <string name="button_fab">Fab button</string>
    <string name="message_board">Message Board</string>
    <string name="post">Post</string>
    <string name="logout">logout</string>
    <string name="new_community">New community</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="get_new_updates_around_you">Get new updates around you</string>
    <string name="new_email">New email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="join_us">Join Us!</string>
    <string name="know_what_s_happening_around_you">Know what\'s happening around you!</string>
    <string name="upload_picture">Upload picture</string>
    <string name="save_changes">save changes</string>
    <string name="todo">TODO</string>
    <string name="update_password">Update Password</string>
    <string name="update_email">Update Email</string>
    <string name="what_s_going_on">What\'s going on?</string>
    <string name="notice_board">Notice Board</string>
    <string name="bookmark_list">Bookmark List</string>
    <string name="post_id">Post ID</string>
    <string name="events">Events</string>
    <string name="recommendations">Recommendations</string>
    <string name="crime_information">Crime Information</string>
    <string name="lost_pets">Lost Pets</string>
    <string name="local_services">Local Services</string>
    <string name="general_post">General Post</string>
    <string name="add_hashtag">Add hashtag</string>
    <string name="choose_hashtags">Choose Hashtags</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="manage_request">Manage Requests</string>
    <string name="manage_requests">Manage Requests</string>
    <string name="make_request">Request Notice Board Permissions</string>
    <string name="request_reason">Reason For Request</string>
    <string name="submit_request">Submit Request</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="likes">likes</string>
    <string name="keep_your_account_safe_n_update_your_email">Keep your account safe! \n Update your email</string>
    <string name="keep_your_account_safe_n_update_your_password">Keep your account safe! \n Update your password</string>
    <string name="here_are_your_favourite_posts">Here are your favourite Posts!</string>
    <string name="community">Community</string>
    <string name="add">Add</string>
    <string name="manage_communities">Manage Communities</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="join_another_community">Join Another Community</string>
    <string name="want_more_permissions_n_tell_us_why">Want more permissions? \n Tell us why</string>
</resources>