<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/post_ET"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/upload_pic_Btn"
            android:layout_width="168dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:background="@color/blue_200"
            android:text="@string/upload_picture"
            android:textColor="#212121"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/profile_pic_IV"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.221" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/blue_200"
            android:text="@string/save_changes"
            android:textColor="#212121"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/profile_pic_IV"
            android:layout_width="107dp"
            android:layout_height="114dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.149"
            app:srcCompat="@drawable/persona_ic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/display_Name_TI"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAlignment="viewStart"
            android:hint="@string/disp_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.181"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/updatePassword_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAlignment="viewStart"
            android:text="@string/update_password"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/updateEmail_TV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_Name_TI"
            app:layout_constraintVertical_bias="0.558" />

        <TextView
            android:id="@+id/updateEmail_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAlignment="viewStart"
            android:text="@string/update_email"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_Name_TI"
            app:layout_constraintVertical_bias="0.33" />

        <TextView
            android:id="@+id/makeRequest_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAlignment="viewStart"
            android:text="@string/make_request"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_Name_TI"
            app:layout_constraintVertical_bias="0.536" />

        <TextView
            android:id="@+id/joinCommunity_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/join_another_community"
            android:textSize="16sp"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@+id/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_Name_TI"
            app:layout_constraintVertical_bias="0.75" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
